infra/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week1-backend-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: week1-backend
